<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background2">

    <ImageView
        android:id="@+id/meditrackr_logo"
        android:layout_width="322dp"
        android:layout_height="62dp"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.546"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/patient_username"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_white_border"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/icon_user"
        android:drawablePadding="10dp"
        android:hint="Username"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:textColor="@color/colorPrimaryBlack"
        android:textColorHint="#999999"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/meditrackr_logo" />

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_white_border"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/icon_phone"
        android:drawablePadding="10dp"
        android:hint="Phone Number"
        android:inputType="phone"
        android:paddingLeft="20dp"
        android:textColor="@color/colorPrimaryBlack"
        android:textColorHint="#999999"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/patient_email" />

    <EditText
        android:id="@+id/patient_email"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_white_border"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/icon_email"
        android:drawablePadding="10dp"
        android:hint="Email"
        android:inputType="textWebEmailAddress"
        android:paddingLeft="20dp"
        android:textColor="@color/colorPrimaryBlack"
        android:textColorHint="#999999"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/patient_username" />

    <TextView
        android:id="@+id/select_role_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="Select Role"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/Patient"
        app:layout_constraintStart_toStartOf="@+id/CareProvider"
        app:layout_constraintTop_toBottomOf="@+id/phone_number" />

    <TextView
        android:id="@+id/display_careprovider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/background2"
        android:text="Careprovider"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@color/subtitle"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/CareProvider"
        app:layout_constraintStart_toStartOf="@+id/CareProvider"
        app:layout_constraintTop_toBottomOf="@+id/select_role_title" />

    <TextView
        android:id="@+id/display_patient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="Patient"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@color/subtitle"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/Patient"
        app:layout_constraintStart_toStartOf="@+id/Patient"
        app:layout_constraintTop_toBottomOf="@+id/select_role_title" />

    <ImageView
        android:id="@+id/CareProvider"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/background2"
        android:cropToPadding="true"
        app:layout_constraintEnd_toStartOf="@+id/Patient"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/guideline_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display_careprovider"
        app:srcCompat="@drawable/icon_doctor" />

    <ImageView
        android:id="@+id/Patient"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/CareProvider"
        app:layout_constraintTop_toBottomOf="@+id/display_patient"
        app:srcCompat="@drawable/patient" />

    <Button
        android:id="@+id/signup_button"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/gradient_main"
        android:text="CREATE ACCOUNT"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/Patient" />

    <TextView
        android:id="@+id/already_member"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/already_have_an_account"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@color/subtitle"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/signup_button" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />

</android.support.constraint.ConstraintLayout>