<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="false"
    >

    <TextView
        android:id="@+id/edit_problem_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:text="Edit Problem"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_problem_title_field"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/rounded_white_border"
        android:backgroundTint="@color/white"
        android:hint="Problem"
        android:inputType="text"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="@color/colorPrimaryBlack"
        android:textColorHint="@color/editTextHint"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_problem_title" />

    <EditText
        android:id="@+id/edit_problem_description_field"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/rounded_white_border"
        android:backgroundTint="@color/white"
        android:hint="Description"
        android:inputType="text"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="@color/colorPrimaryBlack"
        android:textColorHint="@color/editTextHint"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_problem_date_selector" />

    <EditText
        android:id="@+id/edit_problem_date_selector"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/rounded_white_border"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:focusable="false"
        android:hint="Start Date"
        android:inputType="text"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="@color/colorPrimaryBlack"
        android:textColorHint="@color/editTextHint"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_problem_title_field" />

    <Button
        android:id="@+id/edit_problem_save_button"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/gradient_main"
        android:text="SAVE"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_problem_description_field" />
</android.support.constraint.ConstraintLayout>